--- a/ci/tutor-deploy/environments/dev/k8s/ingress.yml
+++ b/ci/tutor-deploy/environments/dev/k8s/ingress.yml
@@ -29,7 +29,7 @@ spec:
   - hosts:
     - "dev.mrionline.com"
     - "*.dev.mrionline.com"
-    secretName: wild-openedx-live-tls
+    secretName: wild-openedx-dev-tls
   rules:
   - host: dev.mrionline.com
     http:
