--- a/ci/tutor-deploy/environments/dev/k8s/cluster-issuer.yml
+++ b/ci/tutor-deploy/environments/dev/k8s/cluster-issuer.yml
@@ -32,7 +32,7 @@ kind: Certificate
 metadata:
   name: le-crt
 spec:
-  secretName: wild-openedx-live-tls
+  secretName: wild-openedx-dev-tls
   issuerRef:
     kind: ClusterIssuer
     name: letsencrypt
