change naming convention to mrionline-global-dev and mrionline-global-live

--- a/.github/workflows/tutor_deploy_dev.yml
+++ b/.github/workflows/tutor_deploy_dev.yml
@@ -54,7 +54,7 @@ jobs:
       - name: Get Kube config
         run: |-
           sudo snap install kubectl --channel=1.23/stable --classic
-          aws eks --region us-east-2 update-kubeconfig --name dev-mrionline-usa --alias eks-dev
+          aws eks --region us-east-2 update-kubeconfig --name dev-mrionline-global --alias eks-dev
 
       # dump version information for aws cli and kubectl to the console
       - name: Check environments versions
@@ -196,7 +196,7 @@ jobs:
       #        example values:
       #          OPENEDX_AWS_ACCESS_KEY: ABDCE123456789OHBBGQ
       #          OPENEDX_AWS_SECRET_ACCESS_KEY: A123456789srJ8lgel+ABCDEFGHIJKabcdefghijk
-      #          S3_STORAGE_BUCKET: dev-mrionline-usa-storage
+      #          S3_STORAGE_BUCKET: dev-mrionline-global-storage
       #          S3_CUSTOM_DOMAIN: cdn.dev.mrionline.com
       #          S3_REGION: us-east-2
       #
@@ -214,7 +214,7 @@ jobs:
       #                      "s3:GetObject*",
       #                      "s3:List*"
       #                  ],
-      #                  "Resource": "arn:aws:s3:::dev-mrionline-usa-storage/*"
+      #                  "Resource": "arn:aws:s3:::dev-mrionline-global-storage/*"
       #              }
       #          ]
       #      }
