--- a/.github/workflows/tutor_deploy_prod.yml
+++ b/.github/workflows/tutor_deploy_prod.yml
@@ -242,40 +242,40 @@ jobs:
           tutor plugins enable discovery
           tutor config save
 
-      #- name: Enable the MFE plugin
-      #  run: |-
-      #    pip install tutor-mfe
-      #    tutor plugins enable mfe
-      #    tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \
-      #                      --set MFE_ENABLE_HTTPS=true
+      - name: Enable the MFE plugin
+        run: |-
+          pip install tutor-mfe
+          tutor plugins enable mfe
+          tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \
+                            --set MFE_ENABLE_HTTPS=true
 
-      #- name: Enable and configure credentials plugin
-      #  run: |-
-      #    pip install git+https://github.com/lpm0073/tutor-contrib-credentials@v13.0.1
-      #    tutor plugins enable credentials
-      #    tutor config save --set CREDENTIALS_DOCKER_IMAGE=${DOCKER_IMAGE_CREDENTIALS} \
-      #                      --set CREDENTIALS_HOST="credentials.${LMS_HOSTNAME}" \
-      #                      --set CREDENTIALS_LMS_HOST=${LMS_HOSTNAME} \
-      #                      --set CREDENTIALS_LMS_URL_ROOT=${LMS_HOSTNAME} \
-      #                      --set CREDENTIALS_LMS_URL=${LMS_HOSTNAME} \
-      #                      --set CREDENTIALS_CATALOG_API_URL=${LMS_HOSTNAME} \
-      #                      --set CREDENTIALS_PRIVACY_POLICY_URL="${LMS_HOSTNAME}/pricacy-policy" \
-      #                      --set CREDENTIALS_SECRET_KEY="${TUTOR_OPENEDX_SECRET_KEY}" \
-      #                      --set CREDENTIALS_SITE_NAME=Your School \
-      #                      --set CREDENTIALS_TOS_URL="${LMS_HOSTNAME}/tos" \
-      #                      --set CREDENTIALS_LOGO_URL="${COMMON_LOGO_URL}" \
-      #                      --set CREDENTIALS_LOGO_URL_PNG="${COMMON_LOGO_URL}" \
-      #                      --set CREDENTIALS_LOGO_URL_SVG="" \
-      #                      --set CREDENTIALS_LOGO_WHITE_URL="${COMMON_LOGO_URL}" \
-      #                      --set CREDENTIALS_LOGO_WHITE_URL_PNG="${COMMON_LOGO_URL}" \
-      #                      --set CREDENTIALS_LOGO_WHITE_URL_SVG="" \
-      #                      --set CREDENTIALS_FAVICON_URL="${COMMON_LOGO_URL}" \
+      - name: Enable and configure credentials plugin
+        run: |-
+          pip install git+https://github.com/lpm0073/tutor-contrib-credentials@v13.0.1
+          tutor plugins enable credentials
+          tutor config save --set CREDENTIALS_DOCKER_IMAGE=${DOCKER_IMAGE_CREDENTIALS} \
+                            --set CREDENTIALS_HOST="credentials.${LMS_HOSTNAME}" \
+                            --set CREDENTIALS_LMS_HOST=${LMS_HOSTNAME} \
+                            --set CREDENTIALS_LMS_URL_ROOT=${LMS_HOSTNAME} \
+                            --set CREDENTIALS_LMS_URL=${LMS_HOSTNAME} \
+                            --set CREDENTIALS_CATALOG_API_URL=${LMS_HOSTNAME} \
+                            --set CREDENTIALS_PRIVACY_POLICY_URL="${LMS_HOSTNAME}/pricacy-policy" \
+                            --set CREDENTIALS_SECRET_KEY="${TUTOR_OPENEDX_SECRET_KEY}" \
+                            --set CREDENTIALS_SITE_NAME=Your School \
+                            --set CREDENTIALS_TOS_URL="${LMS_HOSTNAME}/tos" \
+                            --set CREDENTIALS_LOGO_URL="${COMMON_LOGO_URL}" \
+                            --set CREDENTIALS_LOGO_URL_PNG="${COMMON_LOGO_URL}" \
+                            --set CREDENTIALS_LOGO_URL_SVG="" \
+                            --set CREDENTIALS_LOGO_WHITE_URL="${COMMON_LOGO_URL}" \
+                            --set CREDENTIALS_LOGO_WHITE_URL_PNG="${COMMON_LOGO_URL}" \
+                            --set CREDENTIALS_LOGO_WHITE_URL_SVG="" \
+                            --set CREDENTIALS_FAVICON_URL="${COMMON_LOGO_URL}" \
 
-      #- name: Enable the Xqueue plugin
-      #  run: |-
-      #    pip install tutor-xqueue
-      #    tutor plugins enable xqueue
-      #    tutor config save
+      - name: Enable the Xqueue plugin
+        run: |-
+          pip install tutor-xqueue
+          tutor plugins enable xqueue
+          tutor config save
 
       - name: Enable the Notes plugin
         run: |-
@@ -288,13 +288,13 @@ jobs:
           tutor config save --set OPENEDX_FACEBOOK_APP_ID="${{ secrets.FACEBOOK_APP_ID }}" \
                             --set OPENEDX_FACEBOOK_APP_SECRET="${{ secrets.FACEBOOK_APP_SECRET }}"
 
-      #- name: Enable and configure ecommerce plugin
-      #  run: |-
-      #    pip install tutor-ecommerce
-      #    tutor plugins enable ecommerce
-      #    tutor config save --set ECOMMERCE_ENABLE_IDENTITY_VERIFICATION=false \
-      #                      --set ECOMMERCE_ENABLED_CLIENT_SIDE_PAYMENT_PROCESSORS=[] \
-      #                      --set ECOMMERCE_CURRENCY=USD
+      - name: Enable and configure ecommerce plugin
+        run: |-
+          pip install tutor-ecommerce
+          tutor plugins enable ecommerce
+          tutor config save --set ECOMMERCE_ENABLE_IDENTITY_VERIFICATION=false \
+                            --set ECOMMERCE_ENABLED_CLIENT_SIDE_PAYMENT_PROCESSORS=[] \
+                            --set ECOMMERCE_CURRENCY=USD
 
       - name: Configure Discussion Forum
         run:  |-
