--- a/ci/tutor-deploy/environments/prod/k8s/cluster-issuer.yml
+++ b/ci/tutor-deploy/environments/prod/k8s/cluster-issuer.yml
@@ -24,7 +24,7 @@ spec:
           # for the environment domain.
           route53:
             region: us-east-2
-            hostedZoneID: Z0678975104FIJ285EYOP
+            hostedZoneID: Z0476367ACNR8F3YFZX
 
 ---
 apiVersion: cert-manager.io/v1
