--- a/.github/workflows/tutor_deploy_prod.yml
+++ b/.github/workflows/tutor_deploy_prod.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     env:
       ENVIRONMENT_ID: prod
-      NAMESPACE: openedx
+      NAMESPACE: openedx-prod
       OPENEDX_COMMON_VERSION: open-release/maple.3
       COMMON_LOGO_URL: https://www.edx.org/images/logos/edx-logo-elm.svg
 
@@ -35,7 +35,7 @@ jobs:
       #------------------------------------------------------------------------
 
       # grab the AWS IAM key and scret for the IAM user named 'ci'
-      # These are manually stored in https://github.com/lpm0073/openedx_devops/settings
+      # These are manually stored in https://github.com/Medality-Health/openedx_devops/settings
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
@@ -87,7 +87,7 @@ jobs:
 
       # retrieve the Open edX JWT token that we created with Terraform and
       # then stored in Kubernetes secrets
-      # see: https://github.com/lpm0073/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
+      # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
       - name: Fetch JWT token
         run: |-
           kubectl get secret jwt -n $NAMESPACE -o json |  jq  '.data| map_values(@base64d)'  | jq -r 'keys[] as $k | "\(.[$k])"' > jwt_private_key
@@ -103,7 +103,7 @@ jobs:
       #
       # Also note that we are using jq to add a prefix of "TUTOR_" to each of the parameter names
       #
-      # see: https://github.com/lpm0073/openedx_devops/blob/main/terraform/modules/mysql/main.tf
+      # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/mysql/main.tf
       - name: fetch MySQL configuration from Kubernetes secrets
         run: |-
           echo "TUTOR_RUN_MYSQL=false" >> $GITHUB_ENV
@@ -114,29 +114,10 @@ jobs:
           kubectl get secret mysql-notes -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
           kubectl get secret mysql-xqueue -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
 
-      # retrieve the MongoDB connection parameters that we created in Terraform
-      # and then stored in Kubernetes secrets. These include:
-      #   MONGODB_HOST: mongodb.app.mrionline.com
-      #   MONGODB_PORT: "27017"
-      #   MONGODB_PASSWORD: **************
-      #   MONGODB_USERNAME: root
-      # Also note that we are using jq to add a prefix of "TUTOR_" to each of the parameter names
-      #
-      # see: https://github.com/lpm0073/openedx_devops/blob/main/terraform/modules/mongodb/main.tf
-
-      #--------------------------------------------------------------------
-      # UN-COMMENT THIS BLOCK TO USE DYNAMODB INSTEAD OF MONGODB
-      #--------------------------------------------------------------------
-      #- name: MongoDB
-      #  run: |-
-      #    echo "TUTOR_RUN_MONGODB=false" >> $GITHUB_ENV
-      #    kubectl get secret mongodb-admin -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
-      #--------------------------------------------------------------------
-
       # retrieve the Redis connection parameter that we created in Terraform:
       #   REDIS_HOST: redis.app.mrionline.com
       #
-      # see: https://github.com/lpm0073/openedx_devops/blob/main/terraform/modules/redis/main.tf
+      # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/redis/main.tf
       - name: fetch Redis configuration from Kubernetes secrets
         run: |-
           echo "TUTOR_RUN_REDIS=false" >> $GITHUB_ENV
@@ -160,7 +141,7 @@ jobs:
                             --set EMAIL_PORT=587 \
                             --set EMAIL_USE_TLS=true
 
-      # see: https://github.com/lpm0073/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
+      # see: https://github.com/Medality-Health/openedx_devops/blob/main/terraform/modules/kubernetes_secrets/main.tf
       - name: fetch EDX Secret Key from Kubernetes secrets
         run: |-
           kubectl get secret edx-secret-key -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' | jq -r 'keys[] as $k | "TUTOR_\($k|ascii_upcase)=\(.[$k])"' >> $GITHUB_ENV
@@ -201,7 +182,7 @@ jobs:
       #          S3_REGION: us-east-2
       #
       # this config depends on a public read-only AWS S3 bucket policy like this:
-      # https://github.com/lpm0073/terraform-openedx/blob/main/components/s3/main.tf#L19
+      # https://github.com/Medality-Health/terraform-openedx/blob/main/components/s3/main.tf#L19
       #
       #      {
       #          "Version": "2012-10-17",
