--- a/ci/tutor-deploy/environments/prod/k8s/ingress.yml
+++ b/ci/tutor-deploy/environments/prod/k8s/ingress.yml
@@ -10,7 +10,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: openedx
+  name: openedx-prod
   namespace: openedx-prod
   annotations:
     # mcdaniel
