--- a/ci/tutor-deploy/environments/prod/config.yml
+++ b/ci/tutor-deploy/environments/prod/config.yml
@@ -2,3 +2,4 @@ LMS_HOSTNAME=app.mrionline.com
 CMS_HOSTNAME=studio.app.mrionline.com
 DOCKER_IMAGE_OPENEDX=621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx:latest
 DOCKER_IMAGE_MFE=621672204142.dkr.ecr.us-east-2.amazonaws.com/mfe:latest
+DOCKER_IMAGE_CREDENTIALS=621672204142.dkr.ecr.us-east-2.amazonaws.com/credentials:latest
