--- a/.github/workflows/tutor_deploy_prod-addons.yml
+++ b/.github/workflows/tutor_deploy_prod-addons.yml
@@ -222,6 +222,20 @@ jobs:
                             --set S3_CUSTOM_DOMAIN="$S3_CUSTOM_DOMAIN" \
                             --set S3_REGION="$S3_REGION"
 
+      # IMPORTANT: you must run tutor_build_hastexo_backup first.
+      #
+      # See the github README for additional AWS S3 configuration
+      # options in the event that you are not also installing
+      # hastexo/tutor-contrib-s3 (included above)
+      - name: Enable the hastexo Backup & Restore plugin
+        run: |-
+          pip install git+https://github.com/hastexo/tutor-contrib-backup@v0.0.6
+          tutor plugins enable backup
+
+          tutor config save --set BACKUP_DOCKER_IMAGE=${DOCKER_IMAGE_BACKUP} \
+                            --set BACKUP_K8S_CRONJOB_HISTORYLIMIT_FAILURE=1 \
+                            --set BACKUP_K8S_CRONJOB_HISTORYLIMIT_SUCCESS=3 \
+                            --set BACKUP_K8S_CRONJOB_BACKUP_SCHEDULE="0 0 * * *"
 
       - name: Enable the Discovery plugin
         run: |-
@@ -229,18 +243,20 @@ jobs:
           tutor plugins enable discovery
           tutor config save
 
+      # IMPORTANT: you must run tutor_build_mfe first.
       - name: Enable the MFE plugin
         run: |-
           pip install tutor-mfe
           tutor plugins enable mfe
-          tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \              # IMPORTANT: you must run tutor_build_mfe first.
+          tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \
                             --set MFE_ENABLE_HTTPS=true
 
+      # IMPORTANT: you must run tutor_build_credentials first.
       - name: Enable and configure credentials plugin
         run: |-
           pip install git+https://github.com/lpm0073/tutor-contrib-credentials@v13.0.1
           tutor plugins enable credentials
-          tutor config save --set CREDENTIALS_DOCKER_IMAGE=${DOCKER_IMAGE_CREDENTIALS} \    # IMPORTANT: you must run tutor_build_credentials first.
+          tutor config save --set CREDENTIALS_DOCKER_IMAGE=${DOCKER_IMAGE_CREDENTIALS} \
                             --set CREDENTIALS_HOST="credentials.${LMS_HOSTNAME}" \
                             --set CREDENTIALS_LMS_HOST=${LMS_HOSTNAME} \
                             --set CREDENTIALS_LMS_URL_ROOT=${LMS_HOSTNAME} \
