--- a/.github/workflows/tutor_deploy_prod-addons.yml
+++ b/.github/workflows/tutor_deploy_prod-addons.yml
@@ -251,7 +251,6 @@ jobs:
           tutor config save --set MFE_DOCKER_IMAGE=${DOCKER_IMAGE_MFE} \
                             --set MFE_ENABLE_HTTPS=true
 
-
       # IMPORTANT: you must run tutor_build_credentials first.
       - name: Enable and configure credentials plugin
         run: |-
@@ -306,7 +305,7 @@ jobs:
           tutor plugins enable forum
           tutor config save
 
-       see: https://github.com/overhangio/tutor-android
+      # see: https://github.com/overhangio/tutor-android
       - name: Configure Android plugin
         run:  |-
           pip install tutor-android
@@ -319,3 +318,58 @@ jobs:
           tutor config save
           cat $TUTOR_ROOT/config.yml
 
+      #------------------------------------------------------------------------
+      # IV. Merge all of the configuration data into Tutor's Open edX
+      #     configuration files: config.yml, lms.env.json, cms.env.json
+      #
+      # In this step we're combining three sources of data:
+      # 1. sensitive configuration data retrieved from Kubernetes secrets in section II above
+      # 2. Open edx application and services configuration data created here in section III
+      # 3. LMS and CMS application configuration data stored in our repo at ci/tutor-deploy/environments/prod/settings_merge.json
+      #------------------------------------------------------------------------
+      - name: Patch Generated Configuration (Static)
+        run:  |-
+          echo "config.yml full path: $(tutor config printroot)/config.yml"
+          cat "$(tutor config printroot)/config.yml"
+          echo ""
+          echo ""
+
+
+          cd $TUTOR_ROOT/env/apps/openedx/config/
+
+          mv lms.env.json lms.env.json.orig
+          jq -s '.[0] * .[1]'  lms.env.json.orig  "$GITHUB_WORKSPACE/ci/tutor-deploy/environments/$ENVIRONMENT_ID/settings_merge.json" >  lms.env.json
+
+          echo 'Tutor lms.env.json contents:'
+          cat lms.env.json
+          echo ""
+          echo ""
+
+          mv cms.env.json cms.env.json.orig
+          jq -s '.[0] * .[1]'  cms.env.json.orig  "$GITHUB_WORKSPACE/ci/tutor-deploy/environments/$ENVIRONMENT_ID/settings_merge.json" >  cms.env.json
+          rm *orig
+
+          echo 'Tutor cms.env.json contents:'
+          cat cms.env.json
+          echo ""
+          echo ""
+
+      #------------------------------------------------------------------------
+      # V. Deploy Open edX
+      #------------------------------------------------------------------------
+      - name: Deploy Tutor
+        run:  |-
+          tutor k8s start
+
+      - name: Run tutor init
+        run:  |-
+          tutor k8s init
+
+      - name: Set theme
+        run:  |-
+          tutor k8s settheme edx-theme
+
+      - name: Create admin user
+        run:  |-
+          $(kubectl get secret admin-edx -n $NAMESPACE  -o json | jq  '.data | map_values(@base64d)' |   jq -r 'keys[] as $k | "export \($k|ascii_upcase)=\(.[$k])"')
+          tutor k8s createuser --password "$ADMIN_PASSWORD" --staff --superuser "$ADMIN_USER" admin@mrionline.com
