--- a/.github/workflows/tutor_build_hastexo_backup.yml
+++ b/.github/workflows/tutor_build_hastexo_backup.yml
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ECR_REPOSITORY: hastexo_backup
+      ECR_REPOSITORY: openedx_backup
       ECR_REGISTRY: 621672204142.dkr.ecr.us-east-2.amazonaws.com
 
     steps:
