--- a/.github/workflows/tutor_build_credentials_image.yml
+++ b/.github/workflows/tutor_build_credentials_image.yml
@@ -16,7 +16,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ECR_REPOSITORY: credentials
+      ECR_REPOSITORY: openedx_credentials
       ECR_REGISTRY: 621672204142.dkr.ecr.us-east-2.amazonaws.com
 
     steps:
