add android build

--- a/.github/workflows/tutor_build_credentials_image.yml
+++ b/.github/workflows/tutor_build_credentials_image.yml
@@ -44,10 +44,9 @@ jobs:
           echo "TUTOR_VERSION=$(tutor --version | cut -f3 -d' ')" >> $GITHUB_ENV
           echo "TUTOR_ENABLE_HTTPS=true" >> $GITHUB_ENV
 
-      - name: Set Tutor Root in the Workspace
+      - name: Set repository tag
         run: |
           echo "REPOSITORY_TAG=$TUTOR_VERSION-$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
-          echo "TUTOR_ROOT=$GITHUB_WORKSPACE/tutor" >> $GITHUB_ENV
 
       - name: Install Tutor credentials plugin
         run: |-
