--- a/.github/workflows/tutor_build_android_image.yml
+++ b/.github/workflows/tutor_build_android_image.yml
@@ -4,10 +4,10 @@
 #
 # date: May-2022
 #
-# usage: Creates a Tutor Docker image for hastexo Backup using the latest stable version of
+# usage: Creates a Tutor Docker image for Android using the latest stable version of
 #        the repo. Registers the new container in AWS ECR.
 #------------------------------------------------------------------------------
-name: Prod Build hastexo Backup Image
+name: Prod Build Android Image
 
 on: workflow_dispatch
 
@@ -15,7 +15,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      ECR_REPOSITORY: openedx_backup
+      ECR_REPOSITORY: openedx_android
       ECR_REGISTRY: 621672204142.dkr.ecr.us-east-2.amazonaws.com
 
     steps:
@@ -47,11 +47,13 @@ jobs:
         run: |
           echo "REPOSITORY_TAG=$TUTOR_VERSION-$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
 
-      - name: Install hastexo Backup plugin
+      # see: https://github.com/overhangio/tutor-android
+      - name: Install Tutor Android plugin
         run: |-
-          pip install git+https://github.com/hastexo/tutor-contrib-backup@v0.0.6
-          tutor plugins enable backup
-          tutor config save --set BACKUP_DOCKER_IMAGE=${ECR_REGISTRY}/${ECR_REPOSITORY}:${REPOSITORY_TAG}
+          pip install tutor-android
+          tutor plugins enable android
+          tutor config save --set ANDROID_DOCKER_IMAGE=${ECR_REGISTRY}/${ECR_REPOSITORY}:${REPOSITORY_TAG} \
+                            --set ANDROID_APP_VERSION=master
 
       - name: Test Tutor and Environment
         run: |
@@ -60,11 +62,11 @@ jobs:
           echo "TUTOR_ROOT=$TUTOR_ROOT"
 
       - name: Build the image
-        run: tutor images build backup
+        run: tutor images build android
 
       - name: Push the image
         run: |
-          tutor images push backup
+          tutor images push android
           docker tag ${ECR_REGISTRY}/${ECR_REPOSITORY}:${REPOSITORY_TAG} ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest
           docker push ${ECR_REGISTRY}/${ECR_REPOSITORY}:latest
 
