--- a/.github/workflows/tutor_build_mfe_image.yml
+++ b/.github/workflows/tutor_build_mfe_image.yml
@@ -43,10 +43,9 @@ jobs:
           echo "TUTOR_VERSION=$(tutor --version | cut -f3 -d' ')" >> $GITHUB_ENV
           echo "TUTOR_ENABLE_HTTPS=true" >> $GITHUB_ENV
 
-      - name: Set Tutor Root in the Workspace
+      - name: Set repository tag
         run: |
           echo "REPOSITORY_TAG=$TUTOR_VERSION-$(date +%Y%m%d%H%M)" >> $GITHUB_ENV
-          echo "TUTOR_ROOT=$GITHUB_WORKSPACE/tutor" >> $GITHUB_ENV
 
       # see: https://edx.readthedocs.io/projects/edx-developer-docs/en/latest/micro_frontends/index.html#required-environment-variables
       #      https://github.com/overhangio/tutor-mfe
