--- a/.github/workflows/tutor_deploy_prod-addons.yml
+++ b/.github/workflows/tutor_deploy_prod-addons.yml
@@ -21,14 +21,15 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
+      COMMON_LOGO_URL: https://www.edx.org/images/logos/edx-logo-elm.svg
+      DOCKER_IMAGE_ANDROID: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_android:latest
+      DOCKER_IMAGE_BACKUP: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest
+      DOCKER_IMAGE_CREDENTIALS: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_credentials:latest
+      DOCKER_IMAGE_MFE: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
+      DOCKER_IMAGE_OPENEDX: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx:latest
       ENVIRONMENT_ID: prod
       NAMESPACE: openedx-prod
       OPENEDX_COMMON_VERSION: open-release/maple.3
-      COMMON_LOGO_URL: https://www.edx.org/images/logos/edx-logo-elm.svg
-      DOCKER_IMAGE_OPENEDX: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx:latest
-      DOCKER_IMAGE_MFE: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_mfe:latest
-      DOCKER_IMAGE_CREDENTIALS: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_credentials:latest
-      DOCKER_IMAGE_BACKUP: 621672204142.dkr.ecr.us-east-2.amazonaws.com/openedx_backup:latest
 
     steps:
       - name: Checkout
@@ -310,7 +311,11 @@ jobs:
         run:  |-
           pip install tutor-android
           tutor plugins enable android
-          tutor config save
+          tutor config save --set ANDROID_DOCKER_IMAGE=${DOCKER_IMAGE_BACKUP}
+        #                  --set ANDROID_RELEASE_STORE_PASSWORD=yourstorepassword \
+        #                  --set ANDROID_RELEASE_KEY_PASSWORD=yourreleasekeypassword \
+        #                  --set ANDROID_RELEASE_KEY_ALIAS=yourreleasekeyalias \
+        #                  --set ANDROID_ENABLE_RELEASE_MODE=true
 
       - name: Generate Tutor Config
         run:  |-
