fix reference to docker image

--- a/.github/workflows/tutor_build_credentials_image.yml
+++ b/.github/workflows/tutor_build_credentials_image.yml
@@ -8,7 +8,7 @@
 #        (https://github.com/openedx/credentials) using the latest
 #        stable version of the repo. Registers the new container in AWS ECR.
 #------------------------------------------------------------------------------
-name: Build credentials Image
+name: Build Credentials Image
 
 on: workflow_dispatch
 
