--- a/.github/workflows/tutor_build_credentials_image.yml
+++ b/.github/workflows/tutor_build_credentials_image.yml
@@ -50,7 +50,7 @@ jobs:
 
       - name: Install Tutor credentials plugin
         run: |-
-          pip install git+https://github.com/lpm0073/tutor-contrib-credentials.git
+          pip install git+https://github.com/lpm0073/tutor-contrib-credentials@v13.0.1
           tutor plugins enable credentials
           tutor config save --set CREDENTIALS_DOCKER_IMAGE=${ECR_REGISTRY}/${ECR_REPOSITORY}:${REPOSITORY_TAG}
 
