--- a/.github/workflows/tutor_build_backup.yml
+++ b/.github/workflows/tutor_build_backup.yml
@@ -33,4 +33,4 @@ jobs:
           aws-region: us-east-2
 
       - name: Build the image and upload to AWS ECR
-        uses: openedx-actions/tutor-plugin-build-backup
+        uses: openedx-actions/tutor-plugin-build-backup@0.1.0
