--- a/.github/workflows/tutor_build_mfe_image.yml
+++ b/.github/workflows/tutor_build_mfe_image.yml
@@ -32,7 +32,7 @@ jobs:
           aws-region: us-east-2
 
       - name: Build the image and upload to AWS ECR
-        uses: openedx-actions/tutor-plugin-build-mfe@0.1.0
+        uses: openedx-actions/tutor-plugin-build-mfe@v0.1.0
         with:
           subdomain: 'app'
           domain-name: 'mrionline.com'
