--- a/.github/workflows/tutor_build_openedx_image.yml
+++ b/.github/workflows/tutor_build_openedx_image.yml
@@ -37,10 +37,10 @@ jobs:
       - name: Build the image and upload to AWS ECR
         uses: openedx-actions/tutor-plugin-build-openedx@v0.1.1
         with:
-          custom-theme-repository: 'edx-theme-example'
+          custom-theme-repository: 'lpm0073/edx-theme-example'
           custom-theme-repository-ref: 'main'
 
-          custom-plugin-repository: 'lpm0073/openedx-plugin-example'
+          custom-plugin-repository: 'openedx-plugin-example'
           custom-plugin-repository-organization: 'lpm0073'
           custom-plugin-repository-ref: 'main'
 
